Add missing verse semantics

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -130,7 +130,7 @@
 					<p>Live ever sweete booke; the simple image of his gentle witt, and the golden pillar of his noble courage; and ever notify unto the world that thy writer was the secretary of eloquence, the breath of the muses, the honey bee of the daintyest flowers of witt and arte, the pith of morale and intellectual virtues, the arme of Bellona in the field, the tongue of Suada in the chamber, the spirits of Practise in esse, and the paragon of excellence in print. <cite>—Harvey Pierce’s <i epub:type="se:name.publication.book">Supererogation</i></cite>. <a href="the-mutability-of-literature.xhtml#noteref-22" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-23" epub:type="endnote">
-					<blockquote>
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>Thorow earth and waters deepe,</span>
 							<br/>
@@ -416,7 +416,7 @@
 				</li>
 				<li id="note-46" epub:type="endnote">
 					<p>The following is the only stanza extant of this lampoon:⁠—</p>
-					<blockquote>
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>A parliament member, a justice of peace,</span>
 							<br/>
@@ -448,7 +448,7 @@
 					<p>A proof of Shakespeare’s random habits and associates in his youthful days may be found in a traditionary anecdote, picked up at <span epub:type="z3998:place">Stratford</span> by the elder Ireland, and mentioned in his <i epub:type="se:name.publication.book">Picturesque Views on the Avon</i>.</p>
 					<p>About seven miles from <span epub:type="z3998:place">Stratford</span> lies the thirsty little market-town of <span epub:type="z3998:place">Bedford</span>, famous for its ale. Two societies of the village yeomanry used to meet, under the appellation of the “Bedford Topers,” and to challenge the lovers of good ale of the neighboring villages to a contest of drinking. Among others, the people of <span epub:type="z3998:place">Stratford</span> were called out to prove the strength of their heads; and in the number of the champions was Shakespeare, who, in spite of the proverb that “they who drink beer will think beer,” was as true to his ale as Falstaff to his sack. The chivalry of <span epub:type="z3998:place">Stratford</span> was staggered at the first onset, and sounded a retreat while they had yet the legs to carry them off the field. They had scarcely marched a mile when, their legs failing them, they were forced to lie down under a crab tree, where they passed the night. It was still standing, and goes by the name of Shakespeare’s tree.</p>
 					<p>In the morning his companions awaked the bard, and proposed returning to <span epub:type="z3998:place">Bedford</span>, but he declined, saying he had enough, having drank with</p>
-					<blockquote>
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>“Piping Pebworth, Dancing Marston,</span>
 							<br/>
