--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -282,7 +282,7 @@
 				</li>
 				<li id="note-37" epub:type="endnote">
 					<p>The Wassail Bowl was sometimes composed of ale instead of wine, with nutmeg, sugar, toast, ginger, and roasted crabs; in this way the nut-brown beverage is still prepared in some old families and round the hearths of substantial farmers at <span epub:type="z3998:event">Christmas</span>. It is also called Lamb’s Wool, and is celebrated by Herrick in his “<span epub:type="se:name.publication.poem">Twelfth Night</span>”:</p>
-					<blockquote>
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span class="i1">Next crowne the bowle full</span>
 							<br/>
