--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -15,12 +15,9 @@
 				<p>I entreat you to believe that I feel truly obliged by your kind intentions towards me, and that I entertain the most unfeigned respect for your most tasteful talents. My house is completely filled with workpeople at this time, and I have only an office to transact business in; and yesterday I was wholly occupied, or I should have done myself the pleasure of seeing you.</p>
 				<p>If it would not suit me to engage in the publication of your present work, it is only because I do not see that scope in the nature of it which would enable me to make those satisfactory accounts between us, without which I really feel no satisfaction in engaging⁠—but I will do all I can to promote their circulation, and shall be most ready to attend to any future plan of yours.</p>
 				<footer>
-					<p epub:type="z3998:valediction">
-						<span>With much regard, I remain, dear sir,</span>
-						<br/>
-						<span>Your faithful servant,</span>
-					</p>
-					<p class="signature">John Murray.</p>
+					<p epub:type="z3998:valediction">With much regard, I remain, dear sir,<br/>
+					Your faithful servant,<br/>
+					<span class="signature">John Murray</span>.</p>
 				</footer>
 			</blockquote>
 			<p>This was disheartening, and might have deterred me from any further prosecution of the matter, had the question of republication in <span epub:type="z3998:place">Great Britain</span> rested entirely with me; but I apprehended the appearance of a spurious edition. I now thought of <abbr>Mr.</abbr> Archibald Constable as publisher, having been treated by him with much hospitality during a visit to <span epub:type="z3998:place">Edinburgh</span>; but first I determined to submit my work to Sir Walter (then <abbr>Mr.</abbr>) Scott, being encouraged to do so by the cordial reception I had experienced from him at <span epub:type="z3998:place">Abbotsford</span> a few years previously, and by the favorable opinion he had expressed to others of my earlier writings. I accordingly sent him the printed numbers of the <i epub:type="se:name.publication.book">Sketch-Book</i> in a parcel by coach, and at the same time wrote to him, hinting that since I had had the pleasure of partaking of his hospitality, a reverse had taken place in my affairs which made the successful exercise of my pen all-important to me; I begged him, therefore, to look over the literary articles I had forwarded to him, and, if he thought they would bear European republication, to ascertain whether <abbr>Mr.</abbr> Constable would be inclined to be the publisher.</p>
@@ -37,7 +34,7 @@
 			<p>Before the receipt of this most obliging letter, however, I had determined to look to no leading bookseller for a launch, but to throw my work before the public at my own risk, and let it sink or swim according to its merits. I wrote to that effect to Scott, and soon received a reply:</p>
 			<p>“I observe with pleasure that you are going to come forth in <span epub:type="z3998:place">Britain</span>. It is certainly not the very best way to publish on one’s own accompt; for the booksellers set their face against the circulation of such works as do not pay an amazing toll to themselves. But they have lost the art of altogether damming up the road in such cases between the author and the public, which they were once able to do as effectually as Diabolus in John Bunyan’s <i epub:type="se:name.publication.book">Holy War</i> closed up the windows of my Lord Understanding’s mansion. I am sure of one thing, that you have only to be known to the <span epub:type="z3998:nationality">British</span> public to be admired by them, and I would not say so unless I really was of that opinion.</p>
 			<p>“If you ever see a witty but rather local publication called <i epub:type="se:name.publication.magazine">Blackwood’s Edinburgh Magazine</i>, you will find some notice of your works in the last number: the author is a friend of mine, to whom I have introduced you in your literary capacity. His name is Lockhart, a young man of very considerable talent, and who will soon be intimately connected with my family. My faithful friend Knickerbocker is to be next examined and illustrated. Constable was extremely willing to enter into consideration of a treaty for your works, but I foresee will be still more so when</p>
-			<blockquote>
+			<blockquote epub:type="z3998:verse">
 				<p>
 					<span>“Your name is up, and may go</span>
 					<br/>
