--- a/src/epub/text/halftitle.xhtml
+++ b/src/epub/text/halftitle.xhtml
@@ -7,9 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="halftitlepage" epub:type="halftitlepage">
-			<h1 epub:type="fulltitle">
-				<span epub:type="title">The Sketch-Book of Geoffrey Crayon, Gent.</span>
-			</h1>
+			<h1 epub:type="fulltitle">The Sketch-Book of Geoffrey Crayon, <abbr class="eoc">Gent.</abbr></h1>
 		</section>
 	</body>
 </html>
