--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,7 +20,7 @@
 					<a href="text/preface.xhtml">Preface to the Revised Edition</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">The Sketch-Book of Geoffrey Crayon, Gent.</a>
+					<a href="text/halftitle.xhtml">The Sketch-Book of Geoffrey Crayon, <abbr class="eoc">Gent.</abbr></a>
 					<ol>
 						<li>
 							<a href="text/the-authors-account-of-himself.xhtml">The Author’s Account of Himself</a>
