Update headers to new standard

--- a/src/epub/text/philip-of-pokanoket.xhtml
+++ b/src/epub/text/philip-of-pokanoket.xhtml
@@ -8,10 +8,10 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<article id="philip-of-pokanoket" epub:type="se:short-story">
 			<header>
-				<h2 epub:type="title">
-					<span>Philip of Pokanoket</span>
-					<span epub:type="subtitle">An <span epub:type="z3998:nationality">Indian</span> Memoir</span>
-				</h2>
+				<hgroup>
+					<h2 epub:type="title">Philip of Pokanoket</h2>
+					<h3 epub:type="subtitle">An <span epub:type="z3998:nationality">Indian</span> Memoir</h3>
+				</hgroup>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>As monumental bronze unchanged his look:</span>
