--- a/src/epub/text/the-mutability-of-literature.xhtml
+++ b/src/epub/text/the-mutability-of-literature.xhtml
@@ -8,10 +8,10 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<article id="the-mutability-of-literature" epub:type="se:short-story">
 			<header>
-				<h2 epub:type="title">
-					<span>The Mutability of Literature</span>
-					<span epub:type="subtitle">A Colloquy in Westminster Abbey</span>
-				</h2>
+				<hgroup>
+					<h2 epub:type="title">The Mutability of Literature</h2>
+					<h3 epub:type="subtitle">A Colloquy in Westminster Abbey</h3>
+				</hgroup>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span class="i1">I know that all beneath the moon decays,</span>
