--- a/src/epub/text/the-spectre-bridegroom.xhtml
+++ b/src/epub/text/the-spectre-bridegroom.xhtml
@@ -8,10 +8,10 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<article id="the-spectre-bridegroom" epub:type="se:short-story">
 			<header>
-				<h2 epub:type="title">
-					<span>The Spectre Bridegroom</span>
-					<span epub:type="subtitle">A Traveller’s Tale<a href="endnotes.xhtml#note-24" id="noteref-24" epub:type="noteref">24</a></span>
-				</h2>
+				<hgroup>
+					<h2 epub:type="title">The Spectre Bridegroom</h2>
+					<h3 epub:type="subtitle">A Traveller’s Tale<a href="endnotes.xhtml#note-24" id="noteref-24" epub:type="noteref">24</a></h3>
+				</hgroup>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>He that supper for is dight,</span>
