--- a/src/epub/text/rip-van-winkle.xhtml
+++ b/src/epub/text/rip-van-winkle.xhtml
@@ -8,10 +8,10 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<article id="rip-van-winkle" epub:type="se:short-story">
 			<header>
-				<h2 epub:type="title">
-					<span>Rip Van Winkle</span>
-					<span epub:type="subtitle">A Posthumous Writing of Diedrich Knickerbocker</span>
-				</h2>
+				<hgroup>
+					<h2 epub:type="title">Rip Van Winkle</h2>
+					<h3 epub:type="subtitle">A Posthumous Writing of Diedrich Knickerbocker</h3>
+				</hgroup>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>By Woden, God of Saxons,</span>
