Replace .signature class with z3998:signature epub:type

--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -17,7 +17,7 @@
 				<footer>
 					<p epub:type="z3998:valediction">With much regard, I remain, dear sir,<br/>
 					Your faithful servant,<br/>
-					<span class="signature">John Murray</span>.</p>
+					<span epub:type="z3998:signature">John Murray</span>.</p>
 				</footer>
 			</blockquote>
 			<p>This was disheartening, and might have deterred me from any further prosecution of the matter, had the question of republication in <span epub:type="z3998:place">Great Britain</span> rested entirely with me; but I apprehended the appearance of a spurious edition. I now thought of <abbr>Mr.</abbr> Archibald Constable as publisher, having been treated by him with much hospitality during a visit to <span epub:type="z3998:place">Edinburgh</span>; but first I determined to submit my work to Sir Walter (then <abbr>Mr.</abbr>) Scott, being encouraged to do so by the cordial reception I had experienced from him at <span epub:type="z3998:place">Abbotsford</span> a few years previously, and by the favorable opinion he had expressed to others of my earlier writings. I accordingly sent him the printed numbers of the <i epub:type="se:name.publication.book">Sketch-Book</i> in a parcel by coach, and at the same time wrote to him, hinting that since I had had the pleasure of partaking of his hospitality, a reverse had taken place in my affairs which made the successful exercise of my pen all-important to me; I begged him, therefore, to look over the literary articles I had forwarded to him, and, if he thought they would bear European republication, to ascertain whether <abbr>Mr.</abbr> Constable would be inclined to be the publisher.</p>
@@ -47,7 +47,7 @@
 			<p>Thus, under the kind and cordial auspices of Sir Walter Scott, I began my literary career in <span epub:type="z3998:place">Europe</span>; and I feel that I am but discharging, in a trifling degree, my debt of gratitude to the memory of that golden-hearted man in acknowledging my obligations to him. But who of his literary contemporaries ever applied to him for aid or counsel that did not experience the most prompt, generous, and effectual assistance?</p>
 			<footer>
 				<p>
-					<abbr class="name signature">W. I.</abbr>
+					<abbr class="name" epub:type="z3998:signature">W. I.</abbr>
 				</p>
 			</footer>
 		</section>
