--- a/src/epub/text/rip-van-winkle.xhtml
+++ b/src/epub/text/rip-van-winkle.xhtml
@@ -99,7 +99,7 @@
 				<p>The foregoing tale, one would suspect, had been suggested to <abbr>Mr.</abbr> Knickerbocker by a little <span epub:type="z3998:nationality">German</span> superstition about the Emperor Frederick <i xml:lang="de">der Rothbart</i> and the Kypphauser mountain; the subjoined note, however, which had appended to the tale, shows that it is an absolute fact, narrated with his usual fidelity:</p>
 				<p>“The story of Rip Van Winkle may seem incredible to many, but nevertheless I give it my full belief, for I know the vicinity of our old <span epub:type="z3998:nationality">Dutch</span> settlements to have been very subject to marvellous events and appearances. Indeed, I have heard many stranger stories than this, in the villages along the Hudson; all of which were too well authenticated to admit of a doubt. I have even talked with Rip Van Winkle myself, who, when last I saw him, was a very venerable old man, and so perfectly rational and consistent on every other point, that I think no conscientious person could refuse to take this into the bargain; nay, I have seen a certificate on the subject taken before a country justice, and signed with cross, in the justice’s own handwriting. The story, therefore, is beyond the possibility of doubt.</p>
 				<footer>
-					<p class="signature">“<abbr class="name">D. K.</abbr>”</p>
+					<p epub:type="z3998:signature">“<abbr class="name">D. K.</abbr>”</p>
 				</footer>
 			</section>
 			<section id="rip-van-winkle-postscript" epub:type="subchapter z3998:postscript">
