--- a/src/epub/text/the-legend-of-sleepy-hollow.xhtml
+++ b/src/epub/text/the-legend-of-sleepy-hollow.xhtml
@@ -107,7 +107,7 @@
 				<p>The cautious old gentleman knit his brows tenfold closer after this explanation, being sorely puzzled by the ratiocination of the syllogism, while methought the one in pepper-and-salt eyed him with something of a triumphant leer. At length he observed that all this was very well, but still he thought the story a little on the extravagant⁠—there were one or two points on which he had his doubts.</p>
 				<p>“Faith, sir,” replied the storyteller, “as to that matter, I don’t believe one-half of it myself.”</p>
 				<footer>
-					<p class="signature">
+					<p epub:type="z3998:signature">
 						<abbr class="name">D. K.</abbr>
 					</p>
 				</footer>
