Add word joiners before and after hair spaces that precede horizontal ellipses

--- a/src/epub/text/little-britain.xhtml
+++ b/src/epub/text/little-britain.xhtml
@@ -10,7 +10,7 @@
 			<header>
 				<h2 epub:type="title">Little Britain</h2>
 				<blockquote epub:type="epigraph">
-					<p>What I write is most true … I have a whole booke of cases lying by me, which if I should sette foorth, some grave auntients (within the hearing of Bow Bell) would be out of charity with me.</p>
+					<p>What I write is most true⁠ ⁠… I have a whole booke of cases lying by me, which if I should sette foorth, some grave auntients (within the hearing of Bow Bell) would be out of charity with me.</p>
 					<cite>Nashe</cite>
 				</blockquote>
 			</header>
