--- a/src/epub/text/the-wife.xhtml
+++ b/src/epub/text/the-wife.xhtml
@@ -19,7 +19,7 @@
 						<br/>
 						<span>Of blessings, when I came but near the house.</span>
 						<br/>
-						<span>What a delicious breath marriage sends forth …</span>
+						<span>What a delicious breath marriage sends forth⁠ ⁠…</span>
 						<br/>
 						<span>The violet bed’s no sweeter!</span>
 					</p>
