--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,8 +25,8 @@
 			and on digital scans available at<br/>
 			<a href="https://books.google.com/books?id=BX5NAAAAYAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">Ichabod Crane Flying from the Headless Horseman</i>,<br/>
-			a painting completed in 1828 by<br/>
+			<i epub:type="se:name.visual-art.painting">The Headless Horseman Pursuing Ichabod Crane</i>,<br/>
+			a painting completed in 1858 by<br/>
 			<a href="https://en.wikipedia.org/wiki/John_Quidor">John Quidor</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
