Correct ID attributes

--- a/src/epub/text/christmas.xhtml
+++ b/src/epub/text/christmas.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<article id="westminster-abbey" epub:type="se:short-story">
+		<article id="christmas" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title z3998:event">Christmas</h2>
 				<blockquote epub:type="epigraph">
