--- a/src/epub/text/the-wife.xhtml
+++ b/src/epub/text/the-wife.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<article id="roscoe" epub:type="se:short-story">
+		<article id="the-wife" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Wife</h2>
 				<blockquote epub:type="epigraph z3998:poem">
