Rename halftitle.xhtml -> halftitlepage.xhtml

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,7 +20,7 @@
 					<a href="text/preface.xhtml">Preface to the Revised Edition</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">The Sketch-Book of Geoffrey Crayon, <abbr class="eoc">Gent.</abbr></a>
+					<a href="text/halftitlepage.xhtml">The Sketch-Book of Geoffrey Crayon, <abbr class="eoc">Gent.</abbr></a>
 					<ol>
 						<li>
 							<a href="text/the-authors-account-of-himself.xhtml">The Author’s Account of Himself</a>
@@ -153,7 +153,7 @@
 					<a href="text/preface.xhtml" epub:type="frontmatter preface">Preface to the Revised Edition</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/the-authors-account-of-himself.xhtml" epub:type="bodymatter z3998:fiction">The Sketch-Book of Geoffrey Crayon, Gent.</a>
