Remove <p> children of drama personas

--- a/src/epub/text/stratford-on-avon.xhtml
+++ b/src/epub/text/stratford-on-avon.xhtml
@@ -105,17 +105,13 @@
 			<table epub:type="z3998:drama">
 				<tbody>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Falstaff</p>
-						</td>
+						<td epub:type="z3998:persona">Falstaff</td>
 						<td>
 							<p>You have a goodly dwelling and a rich.</p>
 						</td>
 					</tr>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Shallow</p>
-						</td>
+						<td epub:type="z3998:persona">Shallow</td>
 						<td>
 							<p>Barren, barren, barren; beggars all, beggars all, Sir John:⁠—marry, good air.</p>
 						</td>
@@ -127,49 +123,37 @@
 			<table epub:type="z3998:drama">
 				<tbody>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Shallow</p>
-						</td>
+						<td epub:type="z3998:persona">Shallow</td>
 						<td>
 							<p>Sir Hugh, persuade me not: I will make a Star Chamber matter of it; if he were twenty John Falstaffs, he shall not abuse Sir Robert Shallow, <abbr class="eoc">Esq.</abbr></p>
 						</td>
 					</tr>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Slender</p>
-						</td>
+						<td epub:type="z3998:persona">Slender</td>
 						<td>
 							<p>In the county of Gloster, justice of peace and <em>coram</em>.</p>
 						</td>
 					</tr>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Shallow</p>
-						</td>
+						<td epub:type="z3998:persona">Shallow</td>
 						<td>
 							<p>Ay, cousin Slender, and <em>custalorum</em>.</p>
 						</td>
 					</tr>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Slender</p>
-						</td>
+						<td epub:type="z3998:persona">Slender</td>
 						<td>
 							<p>Ay, and <em>ratolorum</em> too, and a gentleman born, master parson; who writes himself <em>Armigero</em> in any bill, warrant, quittance, or obligation, <em>Armigero</em>.</p>
 						</td>
 					</tr>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Shallow</p>
-						</td>
+						<td epub:type="z3998:persona">Shallow</td>
 						<td>
 							<p>Ay, that I do; and have done any time these three hundred years.</p>
 						</td>
 					</tr>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Slender</p>
-						</td>
+						<td epub:type="z3998:persona">Slender</td>
 						<td>
 							<p>All his successors gone before him have done’t, and all his ancestors that come after him may; they may give the dozen white luces in their coat.</p>
 						</td>
@@ -180,25 +164,19 @@
 						</td>
 					</tr>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Shallow</p>
-						</td>
+						<td epub:type="z3998:persona">Shallow</td>
 						<td>
 							<p>The council shall hear it; it is a riot.</p>
 						</td>
 					</tr>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Evans</p>
-						</td>
+						<td epub:type="z3998:persona">Evans</td>
 						<td>
 							<p>It is not meet the council hear of a riot; there is no fear of Got in a riot; the council, hear you, shall desire to hear the fear of Got, and not to hear a riot; take your vizaments in that.</p>
 						</td>
 					</tr>
 					<tr>
-						<td epub:type="z3998:persona">
-							<p>Shallow</p>
-						</td>
+						<td epub:type="z3998:persona">Shallow</td>
 						<td>
 							<p>Ha! o’ my life, if I were young again, the sword should end it!</p>
 						</td>
