[Editorial] lanthorn -> lantern

--- a/src/epub/text/london-antiques.xhtml
+++ b/src/epub/text/london-antiques.xhtml
@@ -13,7 +13,7 @@
 					<p>
 						<span class="i7">—I do walk</span>
 						<br/>
-						<span>Methinks like Guide Vaux, with my dark lanthorn,</span>
+						<span>Methinks like Guide Vaux, with my dark lantern,</span>
 						<br/>
 						<span>Stealing to set the town o’ fire; i’ th’ country</span>
 						<br/>
