--- a/src/epub/text/rip-van-winkle.xhtml
+++ b/src/epub/text/rip-van-winkle.xhtml
@@ -102,7 +102,7 @@
 					<p epub:type="z3998:signature">“<abbr class="name">D. K.</abbr>”</p>
 				</footer>
 			</section>
-			<section id="rip-van-winkle-postscript" epub:type="subchapter z3998:postscript">
+			<section id="rip-van-winkle-postscript" epub:type="z3998:subchapter z3998:postscript">
 				<header>
 					<p>Postscript.</p>
 				</header>
