--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -14,8 +14,8 @@
 			<p><i epub:type="se:name.publication.book">The Sketch-Book of Geoffrey Crayon, <abbr>Gent.</abbr></i><br/>
 			was published in 1820 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Washington_Irving">Washington Irving</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://scriptdaemon.me">Kenneth Williams</a>,<br/>
 			and is based on a transcription produced in 2000 by<br/>
