--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -169,7 +169,7 @@
 					<p><abbr class="initialism">I.e.</abbr>, Cat’s Elbow⁠—the name of a family of those parts, and very powerful in former times. The appellation, we are told, was given in compliment to a peerless dame of the family, celebrated for a fine arm. <a href="the-spectre-bridegroom.xhtml#noteref-25" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-26" epub:type="endnote">
-					<p>Sir <abbr class="name">T.</abbr> Browne. <a href="westminster-abbey.xhtml#noteref-26" epub:type="backlink">↩</a></p>
+					<p>Sir <abbr epub:type="z3998:given-name">T.</abbr> Browne. <a href="westminster-abbey.xhtml#noteref-26" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-27" epub:type="endnote">
 					<p><i epub:type="se:name.publication.book">Poor Robin’s Almanak</i>, 1684. <a href="the-stage-coach.xhtml#noteref-27" epub:type="backlink">↩</a></p>
@@ -487,13 +487,13 @@
 					<p>The <abbr>Rev.</abbr> Increase Mather’s <i epub:type="se:name.publication.book">History</i>. <a href="philip-of-pokanoket.xhtml#noteref-55" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-56" epub:type="endnote">
-					<p><abbr>MS.</abbr> of the <abbr>Rev.</abbr> <abbr class="name">W.</abbr> Ruggles. <a href="philip-of-pokanoket.xhtml#noteref-56" epub:type="backlink">↩</a></p>
+					<p><abbr>MS.</abbr> of the <abbr>Rev.</abbr> <abbr epub:type="z3998:given-name">W.</abbr> Ruggles. <a href="philip-of-pokanoket.xhtml#noteref-56" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-57" epub:type="endnote">
 					<p>From this same treatise, it would appear that angling is a more industrious and devout employment than it is generally considered.⁠—“For when ye purpose to go on your disportes in fishynge ye will not desyre greatlye many persons with you, which might let you of your game. And that ye may serve God devoutly in saying effectually your customable prayers. And thus doying, ye shall eschew and also avoyde many vices, as ydelness, which is principall cause to induce man to many other vices, as it is right well known.” <a href="the-angler.xhtml#noteref-57" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-58" epub:type="endnote">
-					<p><abbr class="name">J.</abbr> Davors. <a href="the-angler.xhtml#noteref-58" epub:type="backlink">↩</a></p>
+					<p><abbr epub:type="z3998:given-name">J.</abbr> Davors. <a href="the-angler.xhtml#noteref-58" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-59" epub:type="endnote">
 					<p>The whippoorwill is a bird which is only heard at night. It receives its name from its note, which is thought to resemble those words. <a href="the-legend-of-sleepy-hollow.xhtml#noteref-59" epub:type="backlink">↩</a></p>
