--- a/src/epub/text/the-angler.xhtml
+++ b/src/epub/text/the-angler.xhtml
@@ -27,7 +27,7 @@
 						<br/>
 						<span>Attending of his trembling quill.</span>
 					</p>
-					<cite>Sir <abbr class="name">H.</abbr> Wotton</cite>
+					<cite>Sir <abbr epub:type="z3998:given-name">H.</abbr> Wotton</cite>
 				</blockquote>
 			</header>
 			<p>It is said that many an unlucky urchin is induced to run away from his family and betake himself to a seafaring life from reading the history of Robinson Crusoe; and I suspect that, in like manner, many of those worthy gentlemen who are given to haunt the sides of pastoral streams with angle-rods in hand may trace the origin of their passion to the seductive pages of honest Izaak Walton. I recollect studying his <i epub:type="se:name.publication.book">Complete Angler</i> several years since in company with a knot of friends in <span epub:type="z3998:place">America</span>, and moreover that we were all completely bitten with the angling mania. It was early in the year, but as soon as the weather was auspicious, and that the spring began to melt into the verge of summer, we took rod in hand and sallied into the country, as stark mad as was ever Don Quixote from reading books of chivalry.</p>
