--- a/src/epub/text/the-legend-of-sleepy-hollow.xhtml
+++ b/src/epub/text/the-legend-of-sleepy-hollow.xhtml
@@ -108,7 +108,7 @@
 				<p>“Faith, sir,” replied the storyteller, “as to that matter, I don’t believe one-half of it myself.”</p>
 				<footer>
 					<p epub:type="z3998:signature">
-						<abbr class="name">D. K.</abbr>
+						<abbr epub:type="z3998:given-name">D. K.</abbr>
 					</p>
 				</footer>
 			</section>
