--- a/src/epub/text/westminster-abbey.xhtml
+++ b/src/epub/text/westminster-abbey.xhtml
@@ -39,7 +39,7 @@
 						<br/>
 						<span class="i1">And death the thaw of all our vanitie.</span>
 					</p>
-					<cite>“<span epub:type="se:name.publication.poem">Christolero’s Epigrams</span>,” by <abbr class="name">T. B.</abbr> 1598</cite>
+					<cite>“<span epub:type="se:name.publication.poem">Christolero’s Epigrams</span>,” by <abbr epub:type="z3998:given-name">T. B.</abbr> 1598</cite>
 				</blockquote>
 			</header>
 			<p>On one of those sober and rather melancholy days in the latter part of autumn when the shadows of morning and evening almost mingle together, and throw a gloom over the decline of the year, I passed several hours in rambling about Westminster Abbey. There was something congenial to the season in the mournful magnificence of the old pile, and as I passed its threshold it seemed like stepping back into the regions of antiquity and losing myself among the shades of former ages.</p>
