--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -47,7 +47,7 @@
 			<p>Thus, under the kind and cordial auspices of Sir Walter Scott, I began my literary career in <span epub:type="z3998:place">Europe</span>; and I feel that I am but discharging, in a trifling degree, my debt of gratitude to the memory of that golden-hearted man in acknowledging my obligations to him. But who of his literary contemporaries ever applied to him for aid or counsel that did not experience the most prompt, generous, and effectual assistance?</p>
 			<footer>
 				<p>
-					<abbr class="name" epub:type="z3998:signature">W. I.</abbr>
+					<abbr epub:type="z3998:personal-name z3998:signature">W. I.</abbr>
 				</p>
 			</footer>
 		</section>
