--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -16,7 +16,7 @@
 					<p>Address on the opening of the Liverpool Institution. <a href="roscoe.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-3" epub:type="endnote">
-					<p>From a poem on the death of the Princess Charlotte, by the Reverend Rann Kennedy, <abbr class="degree eoc">A.M.</abbr> <a href="rural-life-in-england.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+					<p>From a poem on the death of the Princess Charlotte, by the Reverend Rann Kennedy, <abbr epub:type="z3998:name-title" class="eoc">A.M.</abbr> <a href="rural-life-in-england.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
 					<p>Buchanan. <a href="a-royal-poet.xhtml#noteref-4" epub:type="backlink">↩</a></p>
@@ -166,7 +166,7 @@
 					<p>The erudite reader, well versed in good-for-nothing lore, will perceive that the above Tale must have been suggested to the old <span epub:type="z3998:nationality">Swiss</span> by a little French anecdote, a circumstance said to have taken place in <span epub:type="z3998:place">Paris</span>. <a href="the-spectre-bridegroom.xhtml#noteref-24" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-25" epub:type="endnote">
-					<p><abbr class="initialism">I.e.</abbr>, Cat’s Elbow⁠—the name of a family of those parts, and very powerful in former times. The appellation, we are told, was given in compliment to a peerless dame of the family, celebrated for a fine arm. <a href="the-spectre-bridegroom.xhtml#noteref-25" epub:type="backlink">↩</a></p>
+					<p><abbr epub:type="z3998:initialism">I.e.</abbr>, Cat’s Elbow⁠—the name of a family of those parts, and very powerful in former times. The appellation, we are told, was given in compliment to a peerless dame of the family, celebrated for a fine arm. <a href="the-spectre-bridegroom.xhtml#noteref-25" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-26" epub:type="endnote">
 					<p>Sir <abbr epub:type="z3998:given-name">T.</abbr> Browne. <a href="westminster-abbey.xhtml#noteref-26" epub:type="backlink">↩</a></p>
@@ -201,7 +201,7 @@
 					</p>
 				</li>
 				<li id="note-33" epub:type="endnote">
-					<p>“An <span epub:type="z3998:nationality">English</span> gentleman, at the opening of the great day⁠—<abbr class="initialism">i.e.</abbr> on <span epub:type="z3998:event">Christmas</span> day in the morning⁠—had all his tenants and neighbors enter his hall by daybreak. The strong beer was broached, and the blackjacks went plentifully about, with toast, sugar and nutmeg, and good Cheshire cheese. The Hackin (the great sausage) must be boiled by daybreak, or else two young men must take the maiden (<abbr class="initialism">i.e.</abbr> the cook) by the arms and run her round the marketplace till she is shamed of her laziness.” <cite>—⁠“Round about our Sea-Coal Fire.”</cite> <a href="christmas-day.xhtml#noteref-33" epub:type="backlink">↩</a></p>
+					<p>“An <span epub:type="z3998:nationality">English</span> gentleman, at the opening of the great day⁠—<abbr epub:type="z3998:initialism">i.e.</abbr> on <span epub:type="z3998:event">Christmas</span> day in the morning⁠—had all his tenants and neighbors enter his hall by daybreak. The strong beer was broached, and the blackjacks went plentifully about, with toast, sugar and nutmeg, and good Cheshire cheese. The Hackin (the great sausage) must be boiled by daybreak, or else two young men must take the maiden (<abbr epub:type="z3998:initialism">i.e.</abbr> the cook) by the arms and run her round the marketplace till she is shamed of her laziness.” <cite>—⁠“Round about our Sea-Coal Fire.”</cite> <a href="christmas-day.xhtml#noteref-33" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-34" epub:type="endnote">
 					<p>Sir John Suckling. <a href="the-christmas-dinner.xhtml#noteref-34" epub:type="backlink">↩</a></p>
