--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -16,7 +16,7 @@
 					<p>Address on the opening of the Liverpool Institution. <a href="roscoe.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-3" epub:type="endnote">
-					<p>From a poem on the death of the Princess Charlotte, by the Reverend Rann Kennedy, <abbr epub:type="z3998:name-title" class="eoc">A.M.</abbr> <a href="rural-life-in-england.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+					<p>From a poem on the death of the Princess Charlotte, by the Reverend Rann Kennedy, <abbr class="eoc" epub:type="z3998:name-title">A.M.</abbr> <a href="rural-life-in-england.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
 					<p>Buchanan. <a href="a-royal-poet.xhtml#noteref-4" epub:type="backlink">↩</a></p>
