--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -101,7 +101,7 @@
 							<a href="text/little-britain.xhtml">Little Britain</a>
 						</li>
 						<li>
-							<a href="text/stratford-on-avon.xhtml">Stratford-On-Avon</a>
+							<a href="text/stratford-on-avon.xhtml">Stratford-on-Avon</a>
 						</li>
 						<li>
 							<a href="text/traits-of-indian-character.xhtml">Traits of Indian Character</a>
