--- a/src/epub/text/stratford-on-avon.xhtml
+++ b/src/epub/text/stratford-on-avon.xhtml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Stratford-On-Avon</title>
+		<title>Stratford-on-Avon</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
 		<article id="stratford-on-avon" epub:type="se:short-story">
 			<header>
-				<h2 epub:type="title z3998:place">Stratford-On-Avon</h2>
+				<h2 epub:type="title z3998:place">Stratford-on-Avon</h2>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>Thou soft-flowing Avon, by thy silver stream</span>
