--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -141,31 +141,10 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph">Epigraph</a>
-				</li>
-				<li>
-					<a href="text/preface.xhtml" epub:type="frontmatter preface">Preface to the Revised Edition</a>
-				</li>
-				<li>
-					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
-				</li>
-				<li>
-					<a href="text/the-authors-account-of-himself.xhtml" epub:type="bodymatter z3998:fiction">The Sketch-Book of Geoffrey Crayon, Gent.</a>
+					<a href="text/the-authors-account-of-himself.xhtml" epub:type="bodymatter">The Sketch-Book of Geoffrey Crayon, Gent.</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
 				</li>
 			</ol>
 		</nav>
