[Editorial] Modernize spelling

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -305,7 +305,7 @@
 					<p>“The custom of drinking out of the same cup gave place to each having his cup. When the steward came to the doore with the Wassel, he was to cry three times, Wassel, Wassel, Wassel, and then the chappell (chaplain) was to answer with a song.” <cite>—⁠<i epub:type="se:name.publication.book">Archaeologia</i></cite> <a href="the-christmas-dinner.xhtml#noteref-38" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-39" epub:type="endnote">
-					<p>From <i epub:type="se:name.publication.book">Poor Robin’s Almanack</i>. <a href="the-christmas-dinner.xhtml#noteref-39" epub:type="backlink">↩</a></p>
+					<p>From <i epub:type="se:name.publication.book">Poor Robin’s Almanac</i>. <a href="the-christmas-dinner.xhtml#noteref-39" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-40" epub:type="endnote">
 					<p>“At <span epub:type="z3998:event">Christmasse</span> there was in the Kinges house, wheresoever hee was lodged, a lorde of misrule or mayster of merie disportes, and the like had ye in the house of every nobleman of honor, or good worshipper were he spirituall or temporall.” <cite>—⁠Stowe</cite> <a href="the-christmas-dinner.xhtml#noteref-40" epub:type="backlink">↩</a></p>
