--- a/src/epub/text/the-authors-account-of-himself.xhtml
+++ b/src/epub/text/the-authors-account-of-himself.xhtml
@@ -10,7 +10,7 @@
 			<header>
 				<h2 epub:type="title">The Author’s Account of Himself</h2>
 				<blockquote epub:type="epigraph">
-					<p>“I am of this mind with Homer, that as the snaile that crept out of her shel was turned eftsoones into a toad I and thereby was forced to make a stoole to sit on; so the traveller that stragleth from his owne country is in a short time transformed into so monstrous a shape, that he is faine to alter his mansion with his manners, and to live where he can, not where he would.”</p>
+					<p>“I am of this mind with Homer, that as the snaile that crept out of her shel was turned eftsoones into a toad, and thereby was forced to make a stoole to sit on; so the traveller that stragleth from his owne country is in a short time transformed into so monstrous a shape, that he is faine to alter his mansion with his manners, and to live where he can, not where he would.”</p>
 					<cite>Lyly’s <i epub:type="se:name.publication.book">Euphues</i></cite>
 				</blockquote>
 			</header>
