--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<b epub:type="z3998:personal-name">Nelson Nieves</b> and <b epub:type="z3998:personal-name">David Widger</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/2048">Project Gutenberg</a><br/>
-			and on digital scans available at<br/>
+			and on digital scans from<br/>
 			<a href="https://books.google.com/books?id=BX5NAAAAYAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">The Headless Horseman Pursuing Ichabod Crane</i>,<br/>
